[package]
name = "kubernetes-mock"
authors = ["Abel Shields <abshield@cisco.com>"]
description = "Mocking framework for interacting with the Kubernetes API"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/kubernetes-mock"
repository = "https://github.com/cisco-open/kubernetes-mock-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v1_25"]
v1_25 = ["k8s-openapi/v1_25", "dep:kube"]
v1_21 = ["k8s-openapi/v1_21", "dep:kube"]
#v1_18 = ["k8s-openapi-1-18/v1_18", "dep:kube-1-18"]

[dependencies]
# Dependencies for 1.21/1.25 - optional = true, so only enabled if features v1_21 or v1_25 are set
kube = { version = "0.83.0", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.18.0", features = ["schemars"], optional = true }
# Dependencies for 1.18 - also optional, only enabled for feature v1_18
#kube-1-18 = { package = "kube", version = "0.77.0", features = ["runtime", "derive"], optional = true }
#k8s-openapi-1-18 = { package = "k8s-openapi", version = "0.16.0", features = ["schemars"], optional = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.97"
futures = "0.3.28"
thiserror = "1.0.43"
hyper = "0.14.27"
tower-test = "0.4.0"

